--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,25 @@
+<!-- 多说评论框 start -->
+<div class="cont-wrap">
+    <div class="ds-thread" data-thread-key="{{page.duoshuo_id}}{{page.id}}" data-title="{{page.title}}" data-url="http://melonh.com{{page.url}}"></div>
+</div>
+<!-- 多说评论框 end -->
+
 <div class="text-center">
     Handcrafted with <span class="heart">♥</span> by Melon.H
 </div>
+
+<script type="text/javascript" src="http://s2.qhimg.com/static/a9e451ace7e1fd1d/zepto.114.js"></script>
+<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+<script type="text/javascript">
+var duoshuoQuery = {short_name:"melonh"};
+    (function() {
+        var ds = document.createElement('script');
+        //$('.ds-thread').data('url', location.href);
+        ds.type = 'text/javascript';ds.async = true;
+        ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+        ds.charset = 'UTF-8';
+        (document.getElementsByTagName('head')[0] 
+         || document.getElementsByTagName('body')[0]).appendChild(ds);
+    })();
+    </script>
+<!-- 多说公共JS代码 end -->
