--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,9 +1,6 @@
 ---
 layout: default
+duoshuo_id: public
 ---
-<div class="post">
-  <article class="post-content">
-    {{ content }}
-  </article>
 
-</div>
+{{ content }}
