--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,9 +9,9 @@
 </div>
 
 <script type="text/javascript" src="http://s2.qhimg.com/static/a9e451ace7e1fd1d/zepto.114.js"></script>
-<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
-var duoshuoQuery = {short_name:"melonh"};
+    // 多说
+    var duoshuoQuery = {short_name:"melonh"};
     (function() {
         var ds = document.createElement('script');
         //$('.ds-thread').data('url', location.href);
@@ -21,5 +21,14 @@ var duoshuoQuery = {short_name:"melonh"};
         (document.getElementsByTagName('head')[0] 
          || document.getElementsByTagName('body')[0]).appendChild(ds);
     })();
-    </script>
-<!-- 多说公共JS代码 end -->
+
+    // google analytics
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-61531751-1', 'auto');
+      ga('send', 'pageview');
+
+</script>
